--- a/pom.xml
+++ b/pom.xml
@@ -83,10 +83,40 @@
 
     <!--<dependencyManagement>-->
         <dependencies>
-            <dependency>
+            <!--<dependency>
                 <groupId>org.lwjgl</groupId>
                 <artifactId>lwjgl</artifactId>
                 <classifier>${lwjgl.natives}</classifier>
+                <version>${lwjgl.version}</version>
+            </dependency>-->
+            <dependency>
+                <groupId>org.lwjgl</groupId>
+                <artifactId>lwjgl</artifactId>
+                <classifier>natives-linux</classifier>
+                <version>${lwjgl.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.lwjgl</groupId>
+                <artifactId>lwjgl</artifactId>
+                <classifier>natives-windows</classifier>
+                <version>${lwjgl.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.lwjgl</groupId>
+                <artifactId>lwjgl</artifactId>
+                <classifier>natives-macos</classifier>
+                <version>${lwjgl.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.lwjgl</groupId>
+                <artifactId>lwjgl</artifactId>
+                <classifier>natives-linux-arm64</classifier>
+                <version>${lwjgl.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.lwjgl</groupId>
+                <artifactId>lwjgl</artifactId>
+                <classifier>natives-linux-arm32</classifier>
                 <version>${lwjgl.version}</version>
             </dependency>
             <dependency>
